<resources>
    <string name="app_name">ITE Online Shop</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="products">Products</string>
    <string name="search_products">Search products</string>
    <string name="my_profile">My Profile</string>
    <string name="email">Email</string>
    <string name="hot_product">Hot Product</string>
    <string name="best_price">Best Price</string>
    <string name="hot">HOT</string>
    <string name="_9_9">$9.99</string>
    <string name="_12_99">$12.99</string>
    <string name="sale">SALE</string>
    <string name="_6_99">$6.99</string>
    <string name="_7_99">$7.99</string>
    <string name="bunchhay">Bunchhay</string>
    <string name="my_address">My Address</string>
    <string name="bank_account">Bank Account</string>
    <string name="my_coupon">My Coupon</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="user_agreement">User Agreement</string>
    <string name="help_center">Help Center</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
</resources>