<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:background="#014164"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cardCornerRadius="96dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ape" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bunchhay"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/my_address"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_arrow_foreground"
            app:drawableStartCompat="@drawable/ic_location_foreground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:background="@color/silver" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/bank_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_arrow_foreground"
            app:drawableStartCompat="@drawable/ic_card_foreground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:background="@color/silver" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/my_coupon"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_arrow_foreground"
            app:drawableStartCompat="@drawable/ic_coupon_foreground" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#EDEDED" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_arrow_foreground"
            app:drawableStartCompat="@drawable/ic_language_foreground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:background="@color/silver" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_arrow_foreground"
            app:drawableStartCompat="@drawable/ic_about_foreground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:background="@color/silver" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_arrow_foreground"
            app:drawableStartCompat="@drawable/ic_agreement_foreground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:background="@color/silver" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/help_center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_arrow_foreground"
            app:drawableStartCompat="@drawable/ic_help_foreground" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#EDEDED" />
</LinearLayout>